inclusão de validação

--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -2,25 +2,35 @@
   <header class="header">
     <h2> Adicione um <br> pensamento novo:</h2>
   </header>
-  <form action="">
+  <form [formGroup]="form">
     <label for="pensamento">Pensamento</label>
     <input
       type="textarea"
       class="input"
       id="pensamento"
-      name="pensamento"
+      formControlName="conteudo"
       placeholder="Digite o pensamento"
-      [(ngModel)]="pensamento.conteudo"
     />
+    <div class="mensagem__erro" *ngIf="form.get('conteudo')?.errors
+      && form.get('conteudo')?.touched">
+      Pensamento é obrigatório.
+    </div>
     <label for="autoria">Autoria</label>
     <input
       type="textarea"
       class="input"
       id="autoria"
-      name="autoria"
+      formControlName="autoria"
       placeholder="Digite a autoria ou fonte"
-      [(ngModel)]="pensamento.autoria"
     />
+    <div class="mensagem__erro" *ngIf="form.get('autoria')?.errors?.['required']
+      && form.get('autoria')?.touched">
+      Autoria é obrigatória.
+    </div>
+    <div class="mensagem__erro" *ngIf="form.get('autoria')?.errors?.['minlength']
+      && form.get('autoria')?.touched">
+      Precisa de 3 caracteres no mínimo.
+    </div>
 
     <label for="modelo">Selecione o modelo do card</label>
     <div class="container-radio">
@@ -30,8 +40,7 @@
             type="radio"
             id="modelo1"
             value="modelo1"
-            name="modelo-card"
-            [(ngModel)]="pensamento.modelo"
+            formControlName="modelo"
           >
           <div class="custom-radio">
             <span></span>
@@ -42,8 +51,8 @@
         Prévia:
         <div class="modelo modelo1 ff-roboto-mono">
           <img src="../../../../assets/imagens/modelo1.png" alt="">
-          <p class="conteudo">{{ pensamento.conteudo }}</p>
-          <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
+          <p class="conteudo">{{ form.get('conteudo')?.value }}</p>
+          <p class="autoria"><b>{{ form.get('autoria')?.value }}</b></p>
         </div>
 
       </div>
@@ -53,8 +62,7 @@
             type="radio"
             id="modelo2"
             value="modelo2"
-            name="modelo-card"
-            [(ngModel)]="pensamento.modelo"
+            name="modelo"
           >
           <div class="custom-radio">
             <span></span>
@@ -65,8 +73,8 @@
         Prévia:
         <div class="modelo modelo1 ff-roboto-mono">
           <img src="../../../../assets/imagens/modelo2.png" alt="">
-          <p class="conteudo">{{ pensamento.conteudo }}</p>
-          <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
+          <p class="conteudo">{{ form.get('conteudo')?.value }}</p>
+          <p class="autoria"><b>{{ form.get('autoria')?.value }}</b></p>
         </div>
 
       </div>
@@ -76,8 +84,7 @@
             type="radio"
             id="modelo3"
             value="modelo3"
-            name="modelo-card"
-            [(ngModel)]="pensamento.modelo"
+            name="modelo"
           >
           <div class="custom-radio">
             <span></span>
@@ -88,14 +95,18 @@
         Prévia:
         <div class="modelo modelo1 ff-roboto-mono">
           <img src="../../../../assets/imagens/modelo3.png" alt="">
-          <p class="conteudo">{{ pensamento.conteudo }}</p>
-          <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
+          <p class="conteudo">{{ form.get('conteudo')?.value }}</p>
+          <p class="autoria"><b>{{ form.get('autoria')?.value }}</b></p>
         </div>
 
       </div>
     </div>
     <div class="acoes">
-      <button class="botao" (click)="criarPensamento()">Salvar</button>
+      <button
+        [disabled]="!form.valid"
+        (click)="criarPensamento()"
+        [ngClass]="habilitarBotao()"
+        >Salvar</button>
       <button class="botao" (click)="cancelar()">Cancelar</button>
     </div>
   </form>
