--- a/src/app/componentes/pensamentos/listar-pensamentos/listar-pensamentos.component.html
+++ b/src/app/componentes/pensamentos/listar-pensamentos/listar-pensamentos.component.html
@@ -1,6 +1,17 @@
 <section class="container">
   <header class="header d-flex">
-    <h2 class="ff-inter">Meu Mural</h2>
+    <div class="buscar-pensamentos">
+      <input
+        type="search"
+        class="filtro"
+        placeholder="O que você procura?"
+        autofocus
+        [(ngModel)]="filtro"
+        (keyup)="pesquisarPensamentos()"
+      >
+      <img src="../../../../assets/imagens/icone-editar.png" alt="">
+    </div>
+    <h2 class="ff-inter"> Meu Mural </h2>
     <button routerLink="/criarPensamento" class="botao">Adicionar pensamento</button>
   </header>
   <div class="mural" *ngIf="listaPensamentos.length > 0, else semPensamentos">
