Feature de favorito

--- a/src/app/componentes/pensamentos/listar-pensamentos/listar-pensamentos.component.html
+++ b/src/app/componentes/pensamentos/listar-pensamentos/listar-pensamentos.component.html
@@ -9,7 +9,7 @@
         [(ngModel)]="filtro"
         (keyup)="pesquisarPensamentos()"
       >
-      <img src="../../../../assets/imagens/icone-editar.png" alt="">
+      <img src="../../../../assets/imagens/lupa.png" alt="">
     </div>
     <h2 class="ff-inter"> Meu Mural </h2>
     <button routerLink="/criarPensamento" class="botao">Adicionar pensamento</button>
