--- a/src/app/componentes/pensamentos/pensamento/pensamento.component.html
+++ b/src/app/componentes/pensamentos/pensamento/pensamento.component.html
@@ -4,6 +4,9 @@
   <p class="autoria"><b> {{ pensamento.autoria }} </b></p>
 
   <div class="acoes">
+    <button class="botao-favorito" (click)="atualizarFavoritos()">
+      <img src="../../../../assets/imagens/icone-favorito-{{ mudarIconeFavorito() }}.png" alt="favorito">
+    </button>
     <button class="botao-editar">
       <img src="../../../../assets/imagens/icone-editar.png"
       routerLink="/pensamentos/editarPensamento/{{pensamento.id}}">
