--- a/src/app/componentes/pensamentos/listar-pensamentos/listar-pensamentos.component.html
+++ b/src/app/componentes/pensamentos/listar-pensamentos/listar-pensamentos.component.html
@@ -12,7 +12,11 @@
       <img src="../../../../assets/imagens/lupa.png" alt="">
     </div>
     <h2 class="ff-inter"> Meu Mural </h2>
-    <button routerLink="/criarPensamento" class="botao">Adicionar pensamento</button>
+    <div class="botoes">
+      <button class="botao">Meu Mural</button>
+      <button class="botao" (click)="listarPensamentosFavoritos()">Meus Favoritos</button>
+      <button routerLink="/criarPensamento" class="botao">Novo pensamento</button>
+    </div>
   </header>
   <div class="mural" *ngIf="listaPensamentos.length > 0, else semPensamentos">
     <div *ngFor="let pensamento of listaPensamentos">
