--- a/src/app/componentes/pensamentos/listar-pensamentos/listar-pensamentos.component.html
+++ b/src/app/componentes/pensamentos/listar-pensamentos/listar-pensamentos.component.html
@@ -13,14 +13,18 @@
     </div>
     <h2 class="ff-inter"> Meu Mural </h2>
     <div class="botoes">
-      <button class="botao">Meu Mural</button>
+      <button class="botao" (click)="recarregarComponente()">Meu Mural</button>
       <button class="botao" (click)="listarPensamentosFavoritos()">Meus Favoritos</button>
       <button routerLink="/criarPensamento" class="botao">Novo pensamento</button>
     </div>
   </header>
   <div class="mural" *ngIf="listaPensamentos.length > 0, else semPensamentos">
     <div *ngFor="let pensamento of listaPensamentos">
-      <app-pensamento [pensamento]="pensamento"></app-pensamento>
+      <app-pensamento
+        [pensamento]="pensamento"
+        [listaFavoritos]="listaFavoritos"
+      >
+      </app-pensamento>
     </div>
   </div>
 </section>
