--- a/src/app/componentes/pensamentos/listar-pensamentos/listar-pensamentos.component.html
+++ b/src/app/componentes/pensamentos/listar-pensamentos/listar-pensamentos.component.html
@@ -11,7 +11,7 @@
       >
       <img src="../../../../assets/imagens/lupa.png" alt="">
     </div>
-    <h2 class="ff-inter"> Meu Mural </h2>
+    <h2 class="ff-inter"> {{titulo}} </h2>
     <div class="botoes">
       <button class="botao" (click)="recarregarComponente()">Meu Mural</button>
       <button class="botao" (click)="listarPensamentosFavoritos()">Meus Favoritos</button>
